added html file and js file, phone cart incresing done

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body{
 	background: #fff;
 }
+.title{
+	width:300px;
+	margin: auto;
+	margin-bottom: 40px;
+}
 .cart{
 	margin: 100px 0;
 	background-color: #F6F5FA;;
